--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <maven.compiler.target>11</maven.compiler.target>
         <junit5.version>5.6.2</junit5.version>
         <assertj.version>3.15.0</assertj.version>
+        <archunit.version>0.13.1</archunit.version>
     </properties>
 
     <dependencies>
@@ -27,6 +28,13 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.tngtech.archunit</groupId>
+            <artifactId>archunit-junit5</artifactId>
+            <version>${archunit.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
