--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <junit5.version>5.6.2</junit5.version>
         <assertj.version>3.15.0</assertj.version>
         <archunit.version>0.13.1</archunit.version>
+        <joda-money.version>1.0.1</joda-money.version>
     </properties>
 
     <dependencies>
@@ -36,6 +37,13 @@
             <artifactId>archunit-junit5</artifactId>
             <version>${archunit.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.joda</groupId>
+            <artifactId>joda-money</artifactId>
+            <version>${joda-money.version}</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
